# baler

./: .gitignore  CITATION.cff  Dockerfile  Dockerfile.arm  Dockerfile.arm64  Dockerfile.gpu  NOTICE  README.md  config.yaml  entrypoint.sh  fixuid.sh  models_CFD.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: clean_stale_branches.yaml  docker.yaml  github-actions-demo.yaml  test_and_lint.yaml
baler/: __init__.py  __main__.py  baler.py  example_CFD_config.py
baler/baler/modules/: data_processing.py  models.py  training.py
baler/modules/: compressor.py  config.py  data_processing.py  decompressor.py  diagnostics.py  flycheck_helper.py  helper.py  models.py  plotting.py  profile_plotting.py  profiling.py  test.py  trainer.py  training.py  utils.py
baler/modules/config/: config_service.py
data/example_CFD/: example_CFD.npz
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
docs/configs/: WORKSPACE_CONFIGS.md
docs/setup/: docker_setup.md  docker_setup_windows.md  python_setup.md  python_setup_windows_native_gpu.md
documentation/: windows_setup.md
documentation/PRD/: PRD.md
documentation/setup/: .#python_setup.md  docker_setup.md  docker_setup_windows.md  python_setup.md
example/: helper.py  run.py
modules/: data_processing.py  helper.py  loss_functions.py  models.py  nominal_config.json  plotting.py  training.py  utils.py
pre_processing/: root.py
projects/cms/: configClass.py
projects/cms/configs/: cms.json
projects/cms2/: config.json
projects/example_CFD/: config.json  example_CFD_config.py
projects/example_CMS/: example_CMS_analysis.py  example_CMS_config.py  example_CMS_preprocessing.py
projects/example_LHCb/: example_LHCb_analysis.py  example_LHCb_config.py  example_LHCb_preprocessing.py
projects/example_LHCb/compressed_output/: column_names.pickle  compressed.pickle
projects/example_LHCb/model/: cms_normalization_features.csv  model.pt
projects/example_LHCb/training/: after.pickle  before.pickle  loss_data.csv
projects/first/: configClass.py
projects/firstProject/: config.json
projects/good_plots/: configClass.py
projects/maxym/: configClass.py
projects/un/configs/: un.json
src/: run.py
src/baler_compressor/: data_processing.py  decompressor.py  helper.py  trainer.py  utils.py
tests/: test_data_processing.py  test_helper.py  test_plotting.py  test_training.py  test_utils.py
tests/unit/: test_config_creation.py
useful_scripts/: 20482048images  5050 images  read the names  shape of npz  testing cutting techniques.py  tiff to npz  tiff to npz (2048, 2048)
workspaces/CFD_example/data/: example_CFD_data.npz
(+14 files in other folders)
