[tool.poetry]
name = "baler"
version = "0.1.0"
description = "Baler aims to be a tool which will use lossy machine learning based compression methods to compress multi-dimensional data and evaluate the accuracy of the compressed data. The compression “algorithm” is derived by training an auto-encoder to compress and decompress multidimensional data."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "^1.13.1"
tqdm = "^4.64.1"
matplotlib = "^3.6.2"
scikit-learn = "^1.2.0"
pytest = "^7.2.1"
pre-commit = "^3.2.0"
black = "^23.1.0"
hls4ml = "^0.7.1"
tensorflow = "^2.12.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
	".", "baler"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
