[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baler-compressor"
version = "0.0.6"
authors = [
  { name="Alexander Ekman", email="alexander.ekman@fysik.lu.se" },
]
description = "Machine Learning Based Data Compression"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/baler-collaboration/baler"
Issues = "https://github.com/baler-collaboration/baler/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/baler_compressor"]
