[tool.poetry]
name = "baler"
version = "1.4.0"
description = "Baler aims to be a tool which will use lossy machine learning based compression methods to compress multi-dimensional data and evaluate the accuracy of the compressed data. The compression “algorithm” is derived by training an auto-encoder to compress and decompress multidimensional data."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
baler = "baler.baler:main"

[tool.poetry.dependencies]
python = ">=3.8, <3.11.10"
torch = ">=2.0.0, !=2.0.1"
tqdm = "^4.64.1"
matplotlib = "^3.6.2"
scikit-learn = "^1.2.0"
hls4ml = { version = "^0.7.1", optional = true }
tensorflow = { version = "^2.12.0", optional = true }
numpy = "1.23.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"

[tool.poetry.extras]
hls4ml = [ "hls4ml", "tensorflow" ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
